update summary last

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							</p>
 							
 							 <p>
-								Besides, I also had my hands on other projects besides mobile. I had handled several backend API services to generate endpoint that needed for multiple frameworks to use in the company. Also, I had tried my hands-on machine learning project to recognize a human face when I was doing my final project at the university. Right now, from my current work, I have successfully developed a dashboard page that generates a chart of data for the number of approval requests that needed to be displayed. And also I have successfully developed a dashboard page that generates also a chart of data for the company's stock price from different DateTime requests that also needed to be displayed
+								Besides, I also had my hands on other projects besides mobile. I had handled several backend API services to generate endpoint that needed for multiple frameworks to use in the company. Also, I had tried my hands-on machine learning project to recognize a human face when I was doing my final project at the university. Right now, from my current work, I have successfully developed a dashboard page that generates a chart of data that needed to be displayed using ChartJs to improve the easiness and readability to overview the data.
 							</p>
 							
 							 <p>
